--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,10 @@ jobs:
   build-frontend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/frontend
+      - uses: ./.github/actions/frontend
       - run: docker
   build-backend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/backend
+      - uses: ./.github/actions/backend
       - run: docker
-      
