adjust path to dockerfile

--- a/.github/actions/frontend/action.yml
+++ b/.github/actions/frontend/action.yml
@@ -2,4 +2,4 @@ name: 'Build Frontend'
 description: 'To be sure it builds'
 runs:
   using: 'docker'
-  image: 'frontend/Dockerfile'
+  image: './frontend/Dockerfile'
