--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,4 +13,4 @@ ENV PYTHONPATH /
 ENV FLASK_APP src/main.py
 
 # Run the application
-CMD ["flask", "run", "-p", "5000", "-h", "0.0.0.0"]
+# CMD ["flask", "run", "-p", "5000", "-h", "0.0.0.0"]
