--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.6.0",
+    "http-server": "^0.12.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
@@ -20,7 +21,8 @@
     "react-scripts": "4.0.3",
     "react-youtube": "^7.13.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "workbox": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
