--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@inovex.de/elements-react": "^2.3.0",
+    "@inovex.de/elements-react": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,11 +13,14 @@
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
+    "react-image-gallery": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-youtube": "^7.13.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
