--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-image-gallery": "^1.0.9",
+    "react-konva": "^17.0.1-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
