--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@inovex.de/elements-react": "^2.2.0",
     "@inovex.de/elements-react": "^2.3.0",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -24,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-xarrows": "^1.5.2",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
