--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.6.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
-    "react-alice-carousel": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-konva": "^17.0.1-3",
-    "react-responsive-carousel": "^3.2.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
