--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apexcharts": "^3.26.0",
     "bootstrap": "^4.6.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
