Make PWA necessary changes and include the same logos as from frontend

--- a/game/pwa/manifest.json
+++ b/game/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Amelia Flight",
-  "name": "Amelia Flight over Atlantic",
+  "short_name": "Amelia",
+  "name": "The flight over the atlantic",
   "icons": [
     {
       "src": "./icons/icons-192.png",
